<resources>
    <string name="app_name">DeadlineTracker</string>
    <string name="welcome_to_smarttracker">Welcome to SmartTracker!</string>
    <string name="default_web_client_id">983652194517-npsmtsupn04qm1e4r30g1g2l2g1nb60i.apps.googleusercontent.com</string>
    <string name="add_task">add task</string>
    <string name="profile_icon">Profile icon</string>
    <string name="user1_gmail_com">user1@gmail.com</string>
    <string name="user1">User1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_date">Add date</string>
    <string name="set_date">Set Date</string>
    <string name="task_category">Task Category</string>
    <string name="space" />
    <string name="set_time">Set Time</string>
    <string name="task_title">Task Title</string>
    <string name="task_name">Task Name</string>
</resources>