<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@drawable/bottom_diasheet">

    <ImageView
        android:id="@+id/addimageview"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/adddd"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/addtaskdes1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Add New Task"
        android:textSize="20sp"
        android:fontFamily="@font/robotomono_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addimageview" />


    <TextView
        android:id="@+id/Tasknamehint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        android:textColor="@color/textColorPrimary"
        android:textSize="15sp"
        android:fontFamily="@font/robotomono_regular"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/addtaskdes1"
        app:layout_constraintStart_toStartOf="parent"/>


    <EditText
        android:id="@+id/newTaskText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:textColor="#000000"
       android:background="@drawable/taskdetails"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:inputType="none"
        android:fontFamily="@font/robotomono_regular"
        android:hint="@string/space"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/Tasknamehint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/Categoryhint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_category"
        android:textColor="@color/textColorPrimary"
        android:textSize="15sp"
        android:fontFamily="@font/robotomono_regular"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newTaskText" />

    <EditText
        android:id="@+id/Category"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/taskdetails"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:fontFamily="@font/robotomono_regular"
        android:textColor="#000000"
        android:hint="@string/space"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Categoryhint" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Set_Date"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/datetimebtn"
        android:contentDescription="@string/add_date"
        android:drawableStart="@drawable/calender_icon"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/set_date"
        android:fontFamily="@font/robotomono_regular"
        android:textAllCaps="false"
        android:textColor="#013975"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/Category"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="95dp" />

    <TextView
        android:id="@+id/showdate"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:text=""
        android:textAlignment="center"
        android:fontFamily="@font/robotomono_regular"
        android:background="@drawable/taskdetails"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/Set_Date"
        app:layout_constraintStart_toEndOf="@id/Set_Date"
        app:layout_constraintTop_toTopOf="@+id/Set_Date" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Set_Time"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/set_time"
        android:textSize="15sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#013975"
        android:fontFamily="@font/robotomono_regular"
        android:textAllCaps="false"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/set_time_icon"
        android:background="@drawable/datetimebtn"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/Set_Date"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/showtime"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:fontFamily="@font/robotomono_regular"
        android:background="@drawable/taskdetails"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:layout_marginStart="26dp"
        app:layout_constraintBottom_toBottomOf="@+id/Set_Time"
        app:layout_constraintStart_toEndOf="@+id/Set_Time"
        app:layout_constraintTop_toBottomOf="@+id/Set_Date" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/newTaskButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/addtask_button"
        android:text="@string/add_task"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Set_Time" />

</androidx.constraintlayout.widget.ConstraintLayout>